Bug 120336 - FILEOPEN DOCX Change tracking of the section break (next page) is incorrect
Summary: FILEOPEN DOCX Change tracking of the section break (next page) is incorrect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2018-10-05 09:18 UTC by Gabor Kelemen (Collabora)
Modified: 2020-12-14 14:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document from Word 2010 (21.38 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-05 09:18 UTC, Gabor Kelemen (Collabora)
Details
Accepting the change in Word keeps the break (169.79 KB, image/png)
2018-10-05 09:19 UTC, Gabor Kelemen (Collabora)
Details
Accepting the change in Writer removes the break (106.31 KB, image/png)
2018-10-05 09:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-10-05 09:18:17 UTC
Created attachment 145403 [details]
Example document from Word 2010

Insert a section break (new page) in Microsoft Word and delete the previous paragraph on track changes. If we accept the change in Writer, then Writer will delete the section break.

Steps to reproduce:

1.	Create a new document in Microsoft Word 2010.
2.	Press Enter.
3.	Insert a section break (new page) with Layout tab→Breaks→Section Breaks→Next Page.
4.	Enable track changes with Review->Track Changes.
5.	Delete the first paragraph.
6.	Save the file as DOCX.
7.	Open the same file in LibreOffice Writer.
8.	Accept the change.

Actual results:
The document is one page. If we accept the change in Word, the document will be two page.

Expected results:
The page number shouldn’t change, when we accept the change in Writer.

LibreOffice details:
Version: 6.2.0.0.alpha0+
Build Id: e7d3976cb80f7e7401be071905a764dd6cb4d6e
CPU threads: 4; OS: Windows 6.1; UI render: default;
TinderBox: Win-x86@42, Branc:master, Time: 2018-06-29_04:46:32
Locale: hu-HU (hu_HU); Calc: group threaded
Comment 1 Gabor Kelemen (Collabora) 2018-10-05 09:19:06 UTC
Created attachment 145404 [details]
Accepting the change in Word keeps the break
Comment 2 Gabor Kelemen (Collabora) 2018-10-05 09:28:00 UTC
Created attachment 145405 [details]
Accepting the change in Writer removes the break

Happening with current bibisect-win32-6.2

Version: 6.2.0.0.alpha0+
Build ID: 75a48e37b260c145297261d0e0ab5720894404f1
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 3 Xisco Faulí 2018-11-12 13:20:47 UTC
Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 3a99ae072ac170ebed8d1f5bf65913d3412fab67
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.10; Render: default; 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 Commit Notification 2019-10-09 17:48:51 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39090afac268f9ae985832c2f08863b41e6c06f2

tdf#120336 DOCX import: fix page break after tracked deletion

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.