tdf#120336 DOCX import: fix page break after tracked deletion

Actual text content lost its page break, when the last
paragraph of the section was empty and preceded only with
tracked deletion.

See also commit b696600821d8aafb63b6a88016d299ef89478f56
"n#766481 dmapper: don't import fake paragraph containing sectpr only, take two"

Change-Id: I6b1c47da2b618f10ca4887f050469f94efa2a7cb